// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  <a
    className="css-12r0ney"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  <div
    className="css-o2j9ze"
  >
    <div
      className="css-18z4bb7"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="css-vjp7si"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="css-pahxvq"
      >
        <nav>
          <ol>
            <li
              className="css-dr1hkt"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="css-dr1hkt"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "page title",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="css-dr1hkt"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "page title2",
                          }
                        }
                        href="/books/book/pages/page2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="css-1anlpi9"
      id="main-content"
      tabIndex={-1}
    >
      <div>
        <h1
          className="css-a9mrvn"
        >
          book title
           / 
          page title
        </h1>
      </div>
      <div
        className="css-lk7c70"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "some page content yo",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  <a
    className="css-12r0ney"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  <div
    className="css-o2j9ze"
  >
    <div
      className="css-18z4bb7"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="css-vjp7si"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="css-pahxvq"
      >
        <nav>
          <ol>
            <li
              className="css-dr1hkt"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="css-1anlpi9"
      id="main-content"
      tabIndex={-1}
    >
      <div />
      <div
        className="css-lk7c70"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
